<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mis Precios</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Agregar</string>
	<string name="action_del">Borrar</string>
    <string name="action_edit">Editar</string>
    <string name="btn_scan">SCAN</string>
    <string name="btn_add">ADD</string>
    <string name="btn_ok">AGREGAR</string>
    <string name="btn_accept">ACEPTAR</string>
    <string name="btn_cancel">CANCELAR</string>
    <string name="title_activity_add_product">Nuevo Producto</string>
    <string name="add_product_brand_label">Marca: </string>
    <string name="add_product_category_label">Categoría: </string>
    <string name="add_product_description_label">Descripción: </string>
    <string name="add_object">&lt;AGREGAR&gt;</string>
    <string name="new_brand">&lt;NUEVA MARCA&gt;</string>
    <string name="new_category">&lt;NUEVA CATEGORIA&gt;</string>
    <string name="new_market">&lt;NUEVO COMERCIO&gt;</string>
    <string name="title_activity_abmbrand">Agregar Marca</string>
    <string name="title_activity_abmcategory">Agregar Categoria</string>
    <string name="warning_miss_description">Debe ingresar una descripción</string>
    <string name="warning_miss_brand">Debe ingresar una marca</string>
    <string name="warning_miss_category">Debe ingresar una categoría</string>
    <string name="add_product_dialog_message">Desea agregar el producto [%1$s]</string>
    <string name="add_product_dialog_title">Producto no registrado</string>
    <string name="add_price_dialog_message">%1$s\r\n%2$s</string>
    <string name="add_price_dialog_title">Desea registrar el precio?</string>
    <string name="add_price_missing_price">Debe ingresar el precio</string>
    <string name="add_price_missing_quantity">Debe ingresar la cantidad</string>
    <string name="add_price_missing_market">Debe indicar el comercio</string>
    <string name="add_price_missing_date">Ingrese la fecha</string>
    <string name="title_activity_add_price">Registrar Precio</string>
    <string name="lbl_total_price">Precio: $</string>
    <string name="lbl_quantity">Cantidad:</string>
    <string name="lbl_price_per_unit">Precio por unidad: $</string>
    <string name="lbl_market">Comercio:</string>
    <string name="lbl_date">Fecha:</string>
    <string name="title_activity_abmmarket">Agregar Comercio</string>
	<string name="abm_market_market_lbl">Comercio</string>
	<string name="abm_market_location_lbl">Localidad</string>
	<string name="abm_market_missing_market">Debe ingresar el comercio</string>
	<string name="abm_market_missing_location">Debe ingresar la Localidad del comercio</string>
</resources>
