<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ar.com.symsys.mobile.android.misprecios.AddPriceActivity">

    <TextView
        android:id="@+id/add_price_product_description"
        android:text="Laxante Cagadol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lbl_price_per_unit" />

        <EditText
            android:id="@+id/add_price_price_per_unit_edittext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:text="10.00" />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lbl_quantity" />

        <EditText
            android:id="@+id/add_price_quantity_edittext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:text="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lbl_total_price" />

        <EditText
            android:id="@+id/add_price_total_price_edittext"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:editable="false"
            android:text="10.00" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lbl_market"/>
        

        <Spinner
            android:id="@+id/add_price_market_spinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lbl_date"/>

        <TextView
            android:id="@+id/add_price_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/1/2015"
            android:textSize="@dimen/textview_mid" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_price_accept_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_accept"/>

        <Button
            android:id="@+id/add_price_cancel_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"/>
    </LinearLayout>
</LinearLayout>
