<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
	<ListView 
	    android:id="@+id/abm_listview" 
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@+id/linearlayout"/>
	<LinearLayout
	    android:id="@+id/linearlayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_alignParentBottom="true">
	    <EditText 
	        android:id="@+id/abm_edittext"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textCapCharacters"
	        android:hint="@string/abm_market_market_lbl" />
	    <EditText 
	        android:id="@+id/abm_edittext2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textCapCharacters"
	        android:hint="@string/abm_market_location_lbl" />
	    <Button 
	        android:id="@+id/abm_add_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_add"/>
	</LinearLayout>
</RelativeLayout>
