<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ar.com.symsys.mobile.android.misprecios.ProductActivity" >

    <TextView
        android:id="@+id/product_id_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="ProductId"
        android:textSize="@dimen/activiy_header_1" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/add_product_brand_label" />

	    <Spinner 
	        android:id="@+id/add_product_brand_spinner"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/add_product_category_label" />

	    <Spinner 
	        android:id="@+id/add_product_category_spinner"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="top"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/add_product_description_label" />

	    <EditText
	        android:id="@+id/add_product_description_edittext"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:lines="@integer/ProductDescriptionMaxLines"
	        android:maxLines="@integer/ProductDescriptionMaxLines"
	        android:inputType="textCapSentences"
	        android:text="Descripción" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="end"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/add_product_ok_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_accept" />

	    <Button
	        android:id="@+id/add_product_cancel_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/btn_cancel" />
	</LinearLayout>

</LinearLayout>
